--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-single-component",
             "index": "projects/todo-single-component/src/index.html",
             "main": "projects/todo-single-component/src/main.ts",
@@ -29,6 +30,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-single-component/src/environments/environment.ts",
@@ -127,6 +134,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-advanced-directive",
             "index": "projects/todo-advanced-directive/src/index.html",
             "main": "projects/todo-advanced-directive/src/main.ts",
@@ -143,6 +151,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-advanced-directive/src/environments/environment.ts",
@@ -241,6 +255,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-advanced-errorhandling",
             "index": "projects/todo-advanced-errorhandling/src/index.html",
             "main": "projects/todo-advanced-errorhandling/src/main.ts",
@@ -257,6 +272,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-advanced-errorhandling/src/environments/environment.ts",
@@ -355,6 +376,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-advanced-forms-reactive",
             "index": "projects/todo-advanced-forms-reactive/src/index.html",
             "main": "projects/todo-advanced-forms-reactive/src/main.ts",
@@ -371,6 +393,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-advanced-forms-reactive/src/environments/environment.ts",
@@ -469,6 +497,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-advanced-forms-template",
             "index": "projects/todo-advanced-forms-template/src/index.html",
             "main": "projects/todo-advanced-forms-template/src/main.ts",
@@ -485,6 +514,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-advanced-forms-template/src/environments/environment.ts",
@@ -583,6 +618,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-advanced-generic-service",
             "index": "projects/todo-advanced-generic-service/src/index.html",
             "main": "projects/todo-advanced-generic-service/src/main.ts",
@@ -599,6 +635,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-advanced-generic-service/src/environments/environment.ts",
@@ -697,6 +739,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-advanced-pipe",
             "index": "projects/todo-advanced-pipe/src/index.html",
             "main": "projects/todo-advanced-pipe/src/main.ts",
@@ -713,6 +756,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-advanced-pipe/src/environments/environment.ts",
@@ -811,6 +860,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-advanced-routing",
             "index": "projects/todo-advanced-routing/src/index.html",
             "main": "projects/todo-advanced-routing/src/main.ts",
@@ -827,6 +877,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-advanced-routing/src/environments/environment.ts",
@@ -925,6 +981,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-advanced-templating",
             "index": "projects/todo-advanced-templating/src/index.html",
             "main": "projects/todo-advanced-templating/src/main.ts",
@@ -941,6 +998,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-advanced-templating/src/environments/environment.ts",
@@ -1039,6 +1102,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-advanced-translate",
             "index": "projects/todo-advanced-translate/src/index.html",
             "main": "projects/todo-advanced-translate/src/main.ts",
@@ -1055,6 +1119,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-advanced-translate/src/environments/environment.ts",
@@ -1153,6 +1223,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-aot",
             "index": "projects/todo-aot/src/index.html",
             "main": "projects/todo-aot/src/main.ts",
@@ -1169,6 +1240,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-aot/src/environments/environment.ts",
@@ -1267,6 +1344,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-flux",
             "index": "projects/todo-flux/src/index.html",
             "main": "projects/todo-flux/src/main.ts",
@@ -1283,6 +1361,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-flux/src/environments/environment.ts",
@@ -1381,6 +1465,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-mvc",
             "index": "projects/todo-mvc/src/index.html",
             "main": "projects/todo-mvc/src/main.ts",
@@ -1397,6 +1482,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-mvc/src/environments/environment.ts",
@@ -1495,6 +1586,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-mvc-s",
             "index": "projects/todo-mvc-s/src/index.html",
             "main": "projects/todo-mvc-s/src/main.ts",
@@ -1511,6 +1603,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-mvc-s/src/environments/environment.ts",
@@ -1609,6 +1707,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-pwa",
             "index": "projects/todo-pwa/src/index.html",
             "main": "projects/todo-pwa/src/main.ts",
@@ -1626,6 +1725,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-pwa/src/environments/environment.ts",
@@ -1727,6 +1832,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-onpush",
             "index": "projects/todo-onpush/src/index.html",
             "main": "projects/todo-onpush/src/main.ts",
@@ -1743,6 +1849,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-onpush/src/environments/environment.ts",
@@ -1841,6 +1953,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-redux",
             "index": "projects/todo-redux/src/index.html",
             "main": "projects/todo-redux/src/main.ts",
@@ -1857,6 +1970,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-redux/src/environments/environment.ts",
@@ -1955,6 +2074,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-rxjs-redux",
             "index": "projects/todo-rxjs-redux/src/index.html",
             "main": "projects/todo-rxjs-redux/src/main.ts",
@@ -1971,6 +2091,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-rxjs-redux/src/environments/environment.ts",
@@ -2069,6 +2195,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/todo-testing",
             "index": "projects/todo-testing/src/index.html",
             "main": "projects/todo-testing/src/main.ts",
@@ -2085,6 +2212,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "projects/todo-testing/src/environments/environment.ts",
