--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "^8.0.0",
-    "@angular/animations": "^8.0.1",
+    "@angular-devkit/core": "^9.0.2",
+    "@angular-devkit/schematics": "^9.0.2",
+    "@angular/animations": "^9.0.1",
     "@angular/cdk": "^8.0.1",
-    "@angular/common": "^8.0.1",
-    "@angular/compiler": "^8.0.1",
-    "@angular/core": "^8.0.1",
+    "@angular/common": "^9.0.1",
+    "@angular/compiler": "^9.0.1",
+    "@angular/core": "^9.0.1",
     "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "^8.0.1",
+    "@angular/forms": "^9.0.1",
     "@angular/material": "^8.0.1",
-    "@angular/platform-browser": "^8.0.1",
-    "@angular/platform-browser-dynamic": "^8.0.1",
-    "@angular/pwa": "^0.800.3",
-    "@angular/router": "^8.0.1",
-    "@angular/service-worker": "^8.0.1",
+    "@angular/platform-browser": "^9.0.1",
+    "@angular/platform-browser-dynamic": "^9.0.1",
+    "@angular/router": "^9.0.1",
+    "@angular/service-worker": "^9.0.1",
     "@ngrx/effects": "^8.0.1",
     "@ngrx/router-store": "^8.0.1",
     "@ngrx/store": "^8.0.1",
@@ -33,19 +33,19 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "core-js": "^3.1.3",
     "rxjs": "^6.5.2",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^8.0.1",
-    "@angular-devkit/build-angular": "~0.800.0",
-    "typescript": "~3.4.5",
-    "@angular/cli": "^8.0.3",
-    "@angular/language-service": "^8.0.1",
+    "@angular/compiler-cli": "^9.0.1",
+    "@angular-devkit/build-angular": "~0.900.2",
+    "typescript": "~3.7.5",
+    "@angular/cli": "^9.0.2",
+    "@angular/language-service": "^9.0.1",
     "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~12.0.8",
-    "codelyzer": "^5.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
