--- a/projects/todo-flux/tsconfig.app.json
+++ b/projects/todo-flux/tsconfig.app.json
@@ -4,8 +4,11 @@
     "outDir": "../../out-tsc/app",
     "types": []
   },
-  "exclude": [
-    "src/test.ts",
-    "**/*.spec.ts"
+  "files": [
+    "src/main.ts",
+    "src/polyfills.ts"
+  ],
+  "include": [
+    "projects/todo-flux/src/**/*.d.ts"
   ]
 }
