--- a/package.json
+++ b/package.json
@@ -37,10 +37,9 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^9.0.1",
-    "@angular-devkit/build-angular": "~0.900.2",
-    "typescript": "~3.7.5",
+    "@angular-devkit/build-angular": "^0.1000.2",
     "@angular/cli": "^9.0.2",
+    "@angular/compiler-cli": "^9.0.1",
     "@angular/language-service": "^9.0.1",
     "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.3",
@@ -55,6 +54,7 @@
     "karma-jasmine-html-reporter": "^1.1.0",
     "protractor": "~5.4.2",
     "ts-node": "~8.2.0",
-    "tslint": "~5.17.0"
+    "tslint": "~5.17.0",
+    "typescript": "~3.7.5"
   }
 }
