--- a/package.json
+++ b/package.json
@@ -18,19 +18,20 @@
     "@angular/common": "^10.0.3",
     "@angular/compiler": "^10.0.3",
     "@angular/core": "^10.0.3",
-    "@angular/flex-layout": "^9.0.0-beta.29",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "^10.0.3",
     "@angular/material": "^10.0.1",
     "@angular/platform-browser": "^10.0.3",
     "@angular/platform-browser-dynamic": "^10.0.3",
+    "@angular/pwa": "^0.1000.2",
     "@angular/router": "^10.0.3",
     "@angular/service-worker": "^10.0.3",
-    "@ngrx/effects": "^8.0.1",
-    "@ngrx/router-store": "^8.0.1",
-    "@ngrx/store": "^8.0.1",
-    "@ngrx/store-devtools": "^8.0.1",
-    "@ngx-translate/core": "^11.0.1",
-    "@ngx-translate/http-loader": "^4.0.0",
+    "@ngrx/effects": "^9.2.0",
+    "@ngrx/router-store": "^9.2.0",
+    "@ngrx/store": "^9.2.0",
+    "@ngrx/store-devtools": "^9.2.0",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "core-js": "^3.1.3",
     "rxjs": "^6.5.2",
     "tslib": "^2.0.0",
